Recent user-visible changes to Jacl & Tcl Blend:

RCS: @(#) $Id: changes.txt,v 1.35 2000/01/05 23:59:10 mo Exp $

----------------- Released 1.0a1, 10/22/97 -----------------------

10/23/97 (new feature) Added changes file to document user visable
changes made between releases. (RJ)

11/02/97 (bug fix) Makefile/Configure Updates: (BS)
- The tclblendTest target now has a dependency of $(TCLTEST).
- Changed the Tcl Blend binary dist name to tclBlend1.0a1_solaris.tar.Z/gz
- Removed the pyramidpkg demo from the Tcl Blend dists.
- Added the changes file to the dist targets.
- Added most of Christopher Hylands changes to configure.in and 
  Makefile.in files.  
	- Added JAVAC and JAVAH variables
	- Added support for --src-dir, --with-javaarchinclude, 
	  and --with-javaarchlib.
	- Look at Christophers page for more info:
	  http://ptolemy.eecs.berkeley.edu/~cxh/ptpub/tclBlend.html

11/02/97 (bug fix) unix/README.tclblend now states that the LD_LIBRARY_PATH 
must include the path to the java lib dir. (BS)

11/03/97 (reorganize) Changed the classes dir to src. (BS)

11/03/97 (bug fix) Added the man.macros to the docs directory. (BS)

11/03/97 (new feature) Added the java::defineclass command to the Jacl 
interp.  Added the ability for java::new and java::call to look in the 
env(TCL_CLASSPATH) variable for additional paths to search when loading
classes.  Updated the java.n man page.  (BS)

11/11/97 (new feature) New Notifier API implemented for Jacl. See the
classes Notifier, IdleHandler, TimerHandler. (IL)

12/2/97 (bug fix) Tcl Blend crashed if Java object handles were used from
within namespaces. (SS)

12/2/97 (bug fix) Tcl Blend allowed Java object handles to cross
between interpreters under some circumstances. (SS)

12/2/97 (new feature) New commands for handling JavaBean events:
java::bind, java::event, java::throw and "java::info events". (IL)

12/3/97 (new feature) Added basic support for Java Studio. (RJ)
